--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint . --ext .js",
+    "build": "babel src -d lib"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.2.2",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-paper": "^4.9.2",
+    "react-native-web": "^0.17.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "eslint": "^8.1.0",
+    "eslint-plugin-react": "^7.26.1",
+    "prettier": "^2.4.1"
   },
   "private": true
 }
